--- a/src/html/blog.html
+++ b/src/html/blog.html
@@ -35,19 +35,21 @@
                 </div>
 
                 <!-- tags -->
-                <div class="d-flex flex-wrap gap-1 mb-20 mb-md-40 mb-xxl-50">
-                    <a href="#" class="btn btn-outline-black btn-m active">Все</a>
-                    <a href="#" class="btn btn-outline-black btn-m">Продвижение</a>
-                    <a href="#" class="btn btn-outline-black btn-m">Развитие</a>
-                    <a href="#" class="btn btn-outline-black btn-m">Разработка</a>
-                    <a href="#" class="btn btn-outline-black btn-m">SEO</a>
-                    <a href="#" class="btn btn-outline-black btn-m">SMM</a>
-                    <a href="#" class="btn btn-outline-black btn-m">Аналитика</a>
-                    <a href="#" class="btn btn-outline-black btn-m">E-Commers</a>
-                    <a href="#" class="btn btn-outline-black btn-m">Serm</a>
-                    <a href="#" class="btn btn-outline-black btn-m">Маркетинг</a>
-                    <a href="#" class="btn btn-outline-black btn-m">Стратегия</a>
-                    <a href="#" class="btn btn-outline-black btn-m">AMD Media</a>
+                <div class="scrollable-container mx-n-gx mb-20 mb-md-40 mb-xxl-50">
+                    <div class="scrollable-wrapper px-gx gap-1">
+                        <a href="#" class="scrollable-item btn btn-outline-black btn-m active">Все</a>
+                        <a href="#" class="scrollable-item btn btn-outline-black btn-m">Продвижение</a>
+                        <a href="#" class="scrollable-item btn btn-outline-black btn-m">Развитие</a>
+                        <a href="#" class="scrollable-item btn btn-outline-black btn-m">Разработка</a>
+                        <a href="#" class="scrollable-item btn btn-outline-black btn-m">SEO</a>
+                        <a href="#" class="scrollable-item btn btn-outline-black btn-m">SMM</a>
+                        <a href="#" class="scrollable-item btn btn-outline-black btn-m">Аналитика</a>
+                        <a href="#" class="scrollable-item btn btn-outline-black btn-m">E-Commers</a>
+                        <a href="#" class="scrollable-item btn btn-outline-black btn-m">Serm</a>
+                        <a href="#" class="scrollable-item btn btn-outline-black btn-m">Маркетинг</a>
+                        <a href="#" class="scrollable-item btn btn-outline-black btn-m">Стратегия</a>
+                        <a href="#" class="scrollable-item btn btn-outline-black btn-m">AMD Media</a>
+                    </div>
                 </div>
 
                 <!-- blog-cards-grid -->
