--- a/src/html/index.html
+++ b/src/html/index.html
@@ -687,7 +687,8 @@
                             "title": "ООО «НЕОДОМ»",
                             "description": "Хотим выразить нашу искреннюю благодарность за вашу великолепную работу по созданию и комплексному SEO-продвижению сайта Neodom. С самого начала нашего сотрудничества вы проявили высокий уровень профессионализма и сумели найти индивидуальный подход к нашим потребностям. Особенно приятно было видеть",
                             "author": "Романьков А.В.",
-                            "job": "Генеральный директор"
+                            "job": "Генеральный директор",
+                            "reviewURL": "img/home/review-01.jpg"
                         })
                     </div>
                     <div class="swiper-slide">
@@ -696,7 +697,8 @@
                             "title": "ООО «Техническая платформа»",
                             "description": "ООО «Техническая платформа» благодарит Веб-студию «AMD Media» за проявленный профессионализм и качественное выполнение работ под ключ: Дизайн, вёрстка и программирование, а также SEO-продвижение. Благодаря чему добились значительных результатов и достигли поставленных целей на нашем новом сайте по продаже промышленного и складского",
                             "author": "Бочков Ю.В.",
-                            "job": "Генеральный директор"
+                            "job": "Генеральный директор",
+                            "reviewURL": "img/home/review-02.jpg"
                         })
                     </div>
                     <div class="swiper-slide">
@@ -705,7 +707,8 @@
                             "title": "«Лавка садовника»",
                             "description": "Хочу выразить огромную благодарность за вашу помощь в продвижении нашего сайта stroish.ru. Благодаря вашим усилиям наш бизнес стал более заметным и успешным в онлайн-сфере. Сначала сотрудничества я была приятно удивлена вашим профессионализмом и внимание к деталям. Работа по привлечению клиентов и наполнению сайта",
                             "author": "Романьков А.В.",
-                            "job": "Генеральный директор"
+                            "job": "Генеральный директор",
+                            "reviewURL": "img/home/review-03.jpg"
                         })
                     </div>
                     <div class="swiper-slide">
@@ -714,7 +717,8 @@
                             "title": "ООО «Омега СпецСталь»",
                             "description": "В ходе совместной работы сотрудники студии проявили себя настоящими профессионалами. Ваша команда в кратчайшие сроки провела большую аналитическую работу, разработала необходимые страницы для нашего сайта, внесла необходимые изменения и корректировки, создала логотип компании для размещения на сайтах",
                             "author": "Юрмин Б.Б.",
-                            "job": "Генеральный директор"
+                            "job": "Генеральный директор",
+                            "reviewURL": "img/home/review-04.jpg"
                         })
                     </div>
                     <div class="swiper-slide">
@@ -723,7 +727,8 @@
                             "title": "ОАО «Завод имени В.А. Дегтярева»",
                             "description": "Выражаем искреннюю признательность и благодарность коллективу веб-студии «АМД Медиа» и лично Латыпову А.Р. за техническую поддержку и адаптацию каталога продукции на французский язык. Специалисты веб-студии «АМД Медиа» зарекомендовали себя профессиональными и надёжными бизнес-партнёрами. Все поставленные задачи",
                             "author": "Бочков Ю.В.",
-                            "job": "Генеральный директор"
+                            "job": "Генеральный директор",
+                            "reviewURL": "img/home/review-05.jpg"
                         })
                     </div>
                 </div>
