--- a/src/html/projects-single.html
+++ b/src/html/projects-single.html
@@ -215,11 +215,12 @@
 
                         <!-- cta -->
                         <div>
-                            <div class="position-relative overflow-hidden rounded p-20 p-md-30 p-xxl-40 bg-blue-light">
+                            <div class="content-widget-cta2 position-relative overflow-hidden rounded p-20 p-md-30 p-xxl-40 bg-blue-light">
                                 <!-- bg-absolute-img -->
-                                <img class="img-fluid position-absolute top-0 end-0 h-100" src="img/projects/bg-project-cta.png" alt="...">
+                                <img class="bg-absolute-img" src="img/projects/bg-project-cta.png" alt="...">
+                                <!-- contet -->
                                 <div class="position-relative">
-                                    <div class="h2 text-primary mb-0 max-w-700">Обращайтесь к&nbsp;нам&nbsp;за&nbsp;редизайном сайта</div>
+                                    <div class="h3 text-primary mb-0 max-w-700">Обращайтесь<br> к&nbsp;нам&nbsp;за&nbsp;редизайном сайта</div>
                                     <div class="mt-20">
                                         <a href="#" class="btn btn-primary btn-m">Обратиться</a>
                                     </div>
