--- a/src/html/blog-single.html
+++ b/src/html/blog-single.html
@@ -359,7 +359,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="d-grid grid-cols-1 grid-cols-md-2 gap-15 gap-xl-20">
+                                <div class="d-grid grid-cols-1 grid-cols-md-2 gap-md-20">
                                     <!-- col 1 -->
                                     <div>
                                         <div class="rounded p-15 p-xl-20 bg-success-subtle mb-15 mb-xl-20">
@@ -386,7 +386,7 @@
                                         </div>
                                         <div class="rounded p-15 p-xl-20 bg-success-subtle mb-15 mb-xl-20">
                                             <div class="d-flex flex-column gap-10">
-                                                <div class="d-flex align-items-start flex-column flex-md-row gap-10">
+                                                <div class="d-flex align-items-start flex-row gap-10">
                                                     <div class="flex-shrink-0">
                                                         <img class="img-fluid" src="img/icons/remark-icon-plus-30x30@2x.png" alt="..." width="30" height="30">
                                                     </div>
@@ -394,7 +394,7 @@
                                                         <p>Разное преимущество которое мы пишем и показываем</p>
                                                     </div>
                                                 </div>
-                                                <div class="d-flex align-items-start flex-column flex-md-row gap-10">
+                                                <div class="d-flex align-items-start flex-row gap-10">
                                                     <div class="flex-shrink-0">
                                                         <img class="img-fluid" src="img/icons/remark-icon-plus-30x30@2x.png" alt="..." width="30" height="30">
                                                     </div>
@@ -402,7 +402,7 @@
                                                         <p>Разное преимущество которое мы пишем и показываем</p>
                                                     </div>
                                                 </div>
-                                                <div class="d-flex align-items-start flex-column flex-md-row gap-10">
+                                                <div class="d-flex align-items-start flex-row gap-10">
                                                     <div class="flex-shrink-0">
                                                         <img class="img-fluid" src="img/icons/remark-icon-plus-30x30@2x.png" alt="..." width="30" height="30">
                                                     </div>
@@ -439,7 +439,7 @@
                                         </div>
                                         <div class="rounded p-15 p-xl-20 bg-blue-100 mb-15 mb-xl-20">
                                             <div class="d-flex flex-column gap-10">
-                                                <div class="d-flex align-items-start flex-column flex-md-row gap-10">
+                                                <div class="d-flex align-items-start flex-row gap-10">
                                                     <div class="flex-shrink-0">
                                                         <img class="img-fluid" src="img/icons/remark-icon-minus-30x30@2x.png" alt="..." width="30" height="30">
                                                     </div>
@@ -447,7 +447,7 @@
                                                         <p>Разное преимущество которое мы пишем и показываем</p>
                                                     </div>
                                                 </div>
-                                                <div class="d-flex align-items-start flex-column flex-md-row gap-10">
+                                                <div class="d-flex align-items-start flex-row gap-10">
                                                     <div class="flex-shrink-0">
                                                         <img class="img-fluid" src="img/icons/remark-icon-minus-30x30@2x.png" alt="..." width="30" height="30">
                                                     </div>
@@ -455,7 +455,7 @@
                                                         <p>Разное преимущество которое мы пишем и показываем</p>
                                                     </div>
                                                 </div>
-                                                <div class="d-flex align-items-start flex-column flex-md-row gap-10">
+                                                <div class="d-flex align-items-start flex-row gap-10">
                                                     <div class="flex-shrink-0">
                                                         <img class="img-fluid" src="img/icons/remark-icon-minus-30x30@2x.png" alt="..." width="30" height="30">
                                                     </div>
@@ -489,7 +489,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="d-grid grid-cols-1 grid-cols-md-2 gap-15 gap-xl-20">
+                                <div class="d-grid grid-cols-1 grid-cols-md-2 gap-md-20">
                                     <!-- col 1 -->
                                     <div>
                                         <div class="rounded p-15 p-xl-20 bg-white shadow-lg mb-15 mb-xl-20">
